--- a/src/views/sites.html
+++ b/src/views/sites.html
@@ -51,16 +51,18 @@
             <table id="site">
               <thead>
               <tr>
-                <th colspan="3"style="text-align: center;"><h3>Sites</h3></th>
+                <th colspan="4"style="text-align: center;"><h3>Sites</h3></th>
 
               </tr>
               <tr>
+                  <th style="background-color: #7A858C; text-align: center;">ID</th>
                 <th style="background-color: #7A858C; text-align: center;">Factory</th>
                 <th style="background-color: #7A858C; text-align: center;">Area</th>
                 <th style="text-align: center; background-color: #7A858C">Edit</th>
               </tr>
                 <template id="sites-row-template">
                     <tr>
+                        <td>{ID}</td>
                         <td>{Branch}</td>
                         <td>{Department}</td>
                         <td style="text-align:center;">
@@ -95,10 +97,12 @@
           $(document).ready(loadSites());
 
           function passId() {
-        $('#site').find('tr').click( function(){
-          localStorage.setItem("id",$(this).index()+1);
-        });
-      };
+              $('#materials').find('tr').click( function(){
+                  let row = $(this).index()+1;
+                  let id = document.getElementById('site').rows[row].cells[0].innerHTML;
+                  localStorage.setItem("id", id);
+              });
+          };
         </script>
 
     </body>
