--- a/src/views/typology.html
+++ b/src/views/typology.html
@@ -48,12 +48,14 @@
       <div class="column" style="text-align: center;">
             <table id="type">
               <tr>
+                <th style="text-align: center;"><h3>ID</h3></th>
                 <th style="text-align: center;"><h3>Typologies</h3></th>
                 <th style="text-align: center;"><h3>Edit</h3></th>
               </tr>
 
               <template id="typology-row-template">
                 <tr>
+                  <td>{ID}</td>
                   <td>{Description}</td>
                   <td style="text-align:center;">
                     <a href="updatetypology.html" onclick="passId();" class="btn btn-success btn-lg">
@@ -86,9 +88,11 @@
       $(document).ready(loadTypology());
 
       function passId() {
-        $('#type').find('tr').click( function(){
-          localStorage.setItem("id",$(this).index()+1);
-        });
+          $('#materials').find('tr').click( function(){
+              let row = $(this).index()+1;
+              let id = document.getElementById('skills').rows[row].cells[0].innerHTML;
+              localStorage.setItem("id", id);
+          });
       };
     </script>
 
