--- a/src/views/choosemaintainer.html
+++ b/src/views/choosemaintainer.html
@@ -151,30 +151,58 @@
               <th>Availab. Sat</th>
               <th>Availab. Sun</th>
             </tr>
+            <tr>
+                <td>{MainName}</td>
+                <td>{NumSkill}</td>
+                <td>
+                    <button type="button" onclick="passId(1)">{Availab. Mon}</button>
+                </td>
+                <td>
+                    <button type="button" onclick="passId(2)">{Availab. Tue}</button>
+                </td>
+                <td>
+                    <button type="button" onclick="passId(3)">{Availab. Wed}</button>
+                </td>
+                <td>
+                    <button type="button" onclick="passId(4)">{Availab. Thu}</button>
+                </td>
+                <td>
+                    <button type="button" onclick="passId(5)">{Availab. Fri}</button>
+                </td>
+                <td>
+                    <button type="button" onclick="passId(6)">{Availab. Sat}</button>
+                </td>
+                <td>
+                    <button type="button" onclick="passId(7)">{Availab. Sun}</button>
+                </td>
+                <td style="text-align:center;">
+
+            </tr>
+
             <template id="maint-availab-template">
             <tr>
               <td>{MainName}</td>
               <td>{NumSkill}</td>
               <td>
-                <button type="button">{Availab. Mon}</button>
+                <button type="button" onclick="passId('Mon')">{Availab. Mon}</button>
               </td>
               <td>
-                <button type="button">{Availab. Tue}</button>
+                <button type="button" onclick="passId('Tue')">{Availab. Tue}</button>
               </td>
               <td>
-                <button type="button">{Availab. Wed}</button>
+                <button type="button" onclick="passId('Wed')">{Availab. Wed}</button>
               </td>
               <td>
-                <button type="button">{Availab. Thu}</button>
+                <button type="button" onclick="passId('Thu')">{Availab. Thu}</button>
               </td>
               <td>
-                <button type="button">{Availab. Fri}</button>
+                <button type="button" onclick="passId('Fri')">{Availab. Fri}</button>
               </td>
               <td>
-                <button type="button">{Availab. Sat}</button>
+                <button type="button" onclick="passId('Sat')">{Availab. Sat}</button>
               </td>
               <td>
-                <button type="button">{Availab. Sun}</button>
+                <button type="button" onclick="passId('Sun')">{Availab. Sun}</button>
               </td>
               <td style="text-align:center;">
 
@@ -198,6 +226,20 @@
 
        <!-- Custom JS -->
        <script type="text/javascript" src="../controllers/loader.js"></script>
+       <script>
+
+           <!-- Function to get Maintainers' Username -->
+           function passId(day) {
+               $('#maint-availab').find('tr').click( function(){
+                   let row = $(this).index();
+                   let username = document.getElementById("maint-availab").rows[row].cells[0].innerHTML;//.columns[1].value;
+                   console.log(day, username, row);
+                   localStorage.setItem("id",$(this).index());
+
+               });
+           };
+       </script>
+
     </body>
 </html>
 
