added comments and new pages

--- a/src/views/addactivity.html
+++ b/src/views/addactivity.html
@@ -2,6 +2,17 @@
 <html>
     <head>
     	<title> Add Activity </title>
+        <!-- A Planner must be able to create maintenance activities.
+        A maintenance activity can be performed on a line or on an offline machine and can be:
+        - Planned activity
+        - Un-planned activity (EWO)
+        For each activity the following data must be record: activity ID, site which is composed
+        of factory site (branch offices) and area (or department) inside the factory, typology of
+         the maintenance activity (Electrical, electronic, hydraulic, mechanical), activity  description,
+         estimated intervention time (in minutes), interruptible activity (Yes, No),  materials to be used during
+         the maintenance activity (optional), week (in which the  activity must be carried out, between 1 and 52),
+         workspace notes (optional).
+        -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
