--- a/src/views/addprocedure.html
+++ b/src/views/addprocedure.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     	<title> Add Procedure </title>
+        <!--The system must allow to create a list of Maintenance procedures. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
