--- a/src/views/plannedactivities.html
+++ b/src/views/plannedactivities.html
@@ -2,6 +2,11 @@
 <html>
     <head>
     	<title> Select Maintenance Activity </title>
+        <!--The system must allow viewing the list of scheduled maintenance activities ordered by week.
+        For each activity, the following information should be displayed on the screen: activity ID, area,
+        typology, estimated intervention time.
+        Each activity must be selectable.
+        -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -59,6 +64,7 @@
               <th>Estimated Intervention Time</th>
               <th style="text-align: center;"><h3>Select</h3></th>
               <th style="text-align: center;"><h3>Edit</h3></th>
+                <th style="text-align: center;"><h3>Delete</h3></th>
             </tr>
             <template id="activities-row-template">
             <tr>
@@ -74,6 +80,12 @@
                   <span class="glyphicon glyphicon-edit"></span>  
                 </a>
               </td>
+                <td style="text-align:center;">
+                <a href="removeactivity.html" onclick="passId();" class="btn btn-success btn-lg">
+                  <span class="glyphicon glyphicon-edit"></span>
+                </a>
+              </td>
+
             </tr>
             </template>
           </thead>
