--- a/src/views/procedures.html
+++ b/src/views/procedures.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     	<title> Procedures Management </title>
+        <!--The system must allow to view a list of Maintenance procedures. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -51,6 +52,7 @@
                 <th style="text-align: center;"><h3>ID</h3></th>
                 <th style="text-align: center;"><h3>Procedures</h3></th>
                 <th style="text-align: center;"><h3>Edit</h3></th>
+                  <th style="text-align: center;"><h3>Delete</h3></th>
               </tr>
 
               <template id="procedures-row-template">
@@ -61,7 +63,12 @@
                       <a href="updateprocedure.html" onclick="passId();" class="btn btn-success btn-lg">
                          <span class="glyphicon glyphicon-edit"></span>  
                      </a>
-                   </td>
+                  </td>
+                    <td style="text-align:center;">
+                  <a href="removeprocedure.html" onclick="passId();" class="btn btn-success btn-lg">
+                    <span class="glyphicon glyphicon-edit"></span>
+                  </a>
+                </td>
                 </tr>
               </template>
               </thead>
