--- a/src/views/selecthours.html
+++ b/src/views/selecthours.html
@@ -4,6 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Choose Maintainer</title>
+        <!--The system must allow selecting among the days of the week that the Maintainer has  availability and show
+         the following information: week number, date (selected day), activity to assign (activity ID, area, typology,
+          estimated intervention time), workspace  notes, maintainer name, maintainer availability percentage,
+          maintainer competencies  compliance, availability (in minutes for each hour of his workday, e.g. 8:00-9:00,
+          9:00- 10:00).
+          At this point, the system must allow to select the slot of availability time (to assign the schedule in
+          minutes) in which the maintenance activity will be assigned and program the activity. -->
+
         <meta charset="utf-8"/>
         <meta name="author" content="Team 5"/>
         <meta name="description" content="Web application for maintenance activies."/>
