--- a/src/views/typology.html
+++ b/src/views/typology.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<title> Typologies Management </title>
+        <!--The system must allow to view maintenance typologies as Electrical, electronic, hydraulic, mechanical. -->
+
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -51,6 +53,7 @@
                 <th style="text-align: center;"><h3>ID</h3></th>
                 <th style="text-align: center;"><h3>Typologies</h3></th>
                 <th style="text-align: center;"><h3>Edit</h3></th>
+                  <th style="text-align: center;"><h3>Delete</h3></th>
               </tr>
 
               <template id="typology-row-template">
@@ -60,6 +63,11 @@
                   <td style="text-align:center;">
                     <a href="updatetypology.html" onclick="passId();" class="btn btn-success btn-lg">
                       <span class="glyphicon glyphicon-edit"></span>  
+                    </a>
+                  </td>
+                    <td style="text-align:center;">
+                    <a href="removetypology.html" onclick="passId();" class="btn btn-success btn-lg">
+                      <span class="glyphicon glyphicon-edit"></span>
                     </a>
                   </td>
                 </tr>
