--- a/src/views/updateskill.html
+++ b/src/views/updateskill.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     	<title> Update Skill </title>
+        <!-- The system must allow a System Administrator to modify a list of competences related to a specific task. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
