--- a/src/views/updateuser.html
+++ b/src/views/updateuser.html
@@ -2,6 +2,11 @@
 <html>
     <head>
     	<title> User Management </title>
+        <!-- A System Administrator must be able to  modify system users,
+         assign them username, password, and a specific role. The role can be:
+        - Planner (maintenance manager)
+        - Maintainer
+        -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
