--- a/src/views/addsite.html
+++ b/src/views/addsite.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<title> Add Site </title>
+        <!--The system must allow to create sites,
+         which are composed of factory site (branch offices) and area (or department) inside the factory. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
