--- a/src/views/addskill.html
+++ b/src/views/addskill.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<title> Add Skill </title>
+        <!-- The system must allow a System Administrator to create
+        a list of competences related to a specific task.  -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
