--- a/src/views/addsystemadmin.html
+++ b/src/views/addsystemadmin.html
@@ -2,6 +2,12 @@
 <html>
     <head>
     	<title> System Administrator Management </title>
+        <!-- A System Administrator must be able to create  system users,
+        assign them username, password, and a specific role. The role can be:
+        - Planner (maintenance manager)
+        - Maintainer
+        -->
+
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
