--- a/src/views/choosemaintainer.html
+++ b/src/views/choosemaintainer.html
@@ -4,6 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Choose Maintainer</title>
+        <!--Once a specific activity has been verified, the system must allow to assign the scheduled activity
+        to a specific Maintainer, according to his availability. To do this, the system must  show the following
+         information: week number, activity to assign (activity ID, area,  typology, estimated intervention time),
+         competencies required, and the list of  Maintainers with the following information:
+        ● Maintainer name
+        ● Competencies compliance (number of competencies achieved/required)
+        ● Availability percentage (for each day, from Monday to Sunday) -->
+
         <meta charset="utf-8"/>
         <meta name="author" content="Team 5"/>
         <meta name="description" content="Web application for maintenance activies."/>
