--- a/src/views/materials.html
+++ b/src/views/materials.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<title> Materials Management </title>
+        <!-- The system must allow to view a list of materials,
+        to be used during the maintenance activity. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
