--- a/src/views/plannerview.html
+++ b/src/views/plannerview.html
@@ -2,6 +2,12 @@
 <html>
     <head>
     	<title> Maintenance Activities </title>
+        <!--A Planner must be able to manage (create, view, modify or delete) maintenance activities.
+        A maintenance activity can be performed on a line or on an offline machine and can be:
+        - Planned activity
+        - Un-planned activity (EWO)
+        - Extra activity (an unplanned activity type) -->
+
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
