--- a/src/views/removetypology.html
+++ b/src/views/removetypology.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="../controllers/remover.js"></script>
 
     <head>
-    	<title> Remove Material </title>
-        <!-- The system must allow to delete a list of materials,
-        to be used during the maintenance activity. -->
+    	<title> Remove Typology </title>
+        <!--The system must allow to delete maintenance typologies as Electrical, electronic, hydraulic, mechanical. -->
+
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -24,7 +24,7 @@
             a:visited{
               color: black;
             }
-        </style>    
+        </style>
     </head>
     <body>
         <div class="row">
@@ -34,28 +34,28 @@
                 </p>
             </div>
             <div class="header" >
-                <h1> Materials Management </h1>
-            </div> 
+                <h1> Typology Management </h1>
+            </div>
             <div class="header">
               <p>
                 <a href="index.html"><img border="0" src="exit.png" width="70" height="70"> </a>
-              </p>  
-            </div> 
-        </div>    
+              </p>
+            </div>
+        </div>
         <div class="column" style="text-align: center;">
             <fieldset>
-                <legend><h2>Remove material</h2></legend>
+                <legend><h2>Remove typology</h2></legend>
                 <p>
-                    Do you want to delete this material?
+                    Do you want to delete this typology?
                 </p>
                 <p>
-                    <button onclick="removeMaterial()">Delete</button>
+                    <button onclick="removeTypology()">Delete</button>
                 </p>
 
             </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
-        </div>  
+        </div>
     </body>
 </html>
