--- a/src/views/selected.html
+++ b/src/views/selected.html
@@ -2,6 +2,9 @@
 <html>
     <head>
     	<title> Management Area </title>
+        <!--When a Planner role select a specific activity, the system must allow to verify the next  information:
+         week number, activity to assign (activity ID, area, typology, estimated  intervention time), workspace notes,
+         intervention description (activity description) and competencies (those required to perform the intervention). -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
