--- a/src/views/sites.html
+++ b/src/views/sites.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<title> Sites Management </title>
+        <!-- The system must allow to view sites,
+         which are composed of factory site (branch offices) and area (or department) inside the factory. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -51,7 +53,7 @@
             <table id="site">
               <thead>
               <tr>
-                <th colspan="4"style="text-align: center;"><h3>Sites</h3></th>
+                <th colspan="5"style="text-align: center;"><h3>Sites</h3></th>
 
               </tr>
               <tr>
@@ -59,6 +61,7 @@
                 <th style="background-color: #7A858C; text-align: center;">Factory</th>
                 <th style="background-color: #7A858C; text-align: center;">Area</th>
                 <th style="text-align: center; background-color: #7A858C">Edit</th>
+                <th style="text-align: center; background-color: #7A858C">Delete</th>
               </tr>
                 <template id="sites-row-template">
                     <tr>
@@ -68,6 +71,11 @@
                         <td style="text-align:center;">
                           <a href="updatesite.html" onclick="passId();" class="btn btn-success btn-lg">
                             <span class="glyphicon glyphicon-edit"></span>  
+                          </a>
+                       </td>
+                        <td style="text-align:center;">
+                          <a href="removesite.html" onclick="passId();" class="btn btn-success btn-lg">
+                            <span class="glyphicon glyphicon-edit"></span>
                           </a>
                        </td>
                     </tr>
