--- a/src/views/skillassignment.html
+++ b/src/views/skillassignment.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <title> Skills Assignment </title>
+      <!-- For each Maintainer role, the system must allow to assign him specific competencies. -->
       <meta charset="utf-8"/>
       <meta name="author" content="Team 5"/>
       <meta name="description" content="Web application for maintenance activies."/>
