--- a/src/views/updateactivity.html
+++ b/src/views/updateactivity.html
@@ -2,6 +2,11 @@
 <html>
     <head>
       <title> Update Activity </title>
+      <!-- A Planner must be able to  modify maintenance activities.
+      A maintenance activity can be performed on a line or on an offline machine and can be:
+      - Planned activity
+      - Un-planned activity (EWO)
+      -->
       <meta charset="utf-8"/>
       <meta name="author" content="Team 5"/>
       <meta name="description" content="Web application for maintenance activies."/>
