--- a/src/views/updateprocedure.html
+++ b/src/views/updateprocedure.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     	<title> Update Procedure </title>
+        <!-- The system must allow to modify a list of Maintenance procedures. -->
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
