--- a/src/views/updatetypology.html
+++ b/src/views/updatetypology.html
@@ -2,6 +2,8 @@
 <html>
     <head>
     	<title> Update Typology </title>
+        <!--The system must allow to modify maintenance typologies as Electrical, electronic, hydraulic, mechanical. -->
+
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
