--- a/src/views/usermanagement.html
+++ b/src/views/usermanagement.html
@@ -2,6 +2,11 @@
 <html>
     <head>
     	<title> User Management </title>
+       <!-- A System Administrator must be able to view system users,
+        assign them username, password, and a specific role. The role can be:
+        - Planner (maintenance manager)
+        - Maintainer -->
+
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -60,7 +65,7 @@
               <th style="text-align: center;"><h3>E-mail</h3></th>
               <th style="text-align: center;"><h3>Password</h3></th>
               <th style="text-align: center;"><h3>Edit</h3></th>
-
+              <th style="text-align: center;"><h3>Delete</h3></th>
             </tr>
             <template id="users-row-template">
               <tr>
@@ -70,6 +75,11 @@
                 <td>{Password}</td>
                   <td style="text-align:center;">
                   <a href="updateuser.html" onclick="passUsername();" class="btn btn-success btn-lg">
+                      <span class="glyphicon glyphicon-edit"></span>
+                  </a>
+                  </td>
+                   <td style="text-align:center;">
+                  <a href="removeuser.html" onclick="passUsername();" class="btn btn-success btn-lg">
                       <span class="glyphicon glyphicon-edit"></span>
                   </a>
                   </td>
