load needed skills of activity selected

--- a/src/views/choosemaintainer.html
+++ b/src/views/choosemaintainer.html
@@ -236,6 +236,7 @@
        <script type="text/javascript" src="../controllers/loader.js"></script>
        <script>
 
+           $(document).ready(loadWeekPercentage());
            <!-- Function to get Maintainers' Username -->
            function passId(day) {
                $('#maint-availab').find('tr').click( function(){
