--- a/src/views/stylesheet.css
+++ b/src/views/stylesheet.css
@@ -2,7 +2,10 @@
   box-sizing: border-box;
   font-family: 'Goldman', cursive;
 }
-
+a, a:visited, a:hover{
+  text-decoration: none;
+  color: black;
+}
 body {
   font-family: Arial;
   padding: 10px;
@@ -50,7 +53,7 @@ td, th {
   border: 3px solid #dddddd;
   text-align: left;
   padding: 8px;
-  }
+}
 td:hover{
   background-color: #ddd;
 }
@@ -78,36 +81,9 @@ td:hover{
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  text-decoration: none;
 }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
-}
-
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  background-color: #f1f1f1;
-  padding-left: 20px;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Add a card effect for articles */
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-}
 
 /* Clear floats after the columns */
 .row:after {
@@ -127,13 +103,7 @@ td:hover{
   width: 100%;
 }
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn, .footer {   
-    width: 100%;
-    padding: 0;
-  }
-}
+
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
