--- a/src/views/stylesheet.css
+++ b/src/views/stylesheet.css
@@ -61,6 +61,22 @@ td:hover{
 .column{
   padding: 50px;
 }
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  background-color: #f1f1f1;
+  padding-left: 20px;
+}
+
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
@@ -112,4 +128,10 @@ td:hover{
     width: 100%;
   }
 }
-
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn, .footer {   
+    width: 100%;
+    padding: 0;
+  }
+}
